[tool.poetry]
name = "alarmbot"
version = "0.1.0"
description = ""
authors = ["top1Dron <pro100moneyfarmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
tortoise-orm = "^0.17.6"
google-api-python-client = "^2.17.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.5"
celery = "^5.1.2"
redis = "^3.5.3"
asyncpg = "^0.24.0"
oauth2client = "^4.1.3"
pytz = "^2021.1"
aioschedule = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
